[package]
name = "wasm-demo"
version = "0.1.0"
authors = ["Hao Hou <haohou302@gmail.com>"]
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
plotters = {path = "../.."}
plotters-canvas = "^0.3.*"
wasm-bindgen = "^0.2.*"
wee_alloc = "0.4.5"
web-sys = { version = "^0.3.*", features = ["HtmlCanvasElement"] }

[profile.release]
lto = true
